--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/main.css">
     <title>Netflix : UI Clone </title>
 </head>
 
@@ -14,22 +15,22 @@
 <div>
     <header>
         <div class="container">
-            <h2>Netflix</h2>
+            <h2 class="logo">Netflix</h2>
             <nav>
                 <a href="#">
-                    <h2>Início</h2>
+                    Início
                 </a>
                 <a href="#">
-                    <h2>Séries</h2>
+                   Séries
                 </a>
                 <a href="#">
-                    <h2>Documentarios</h2>
+                    Documentarios
                 </a>
                 <a href="#">
-                    <h2>Bombando</h2>
+                   Bombando
                 </a>
                 <a href="#">
-                    <h2>Minha Lista</h2>
+                  Minha Lista
                 </a>
             </nav>
         </div>
