--- a/index.html
+++ b/index.html
@@ -11,30 +11,50 @@
 
 <body>
 
-</body>
-<div>
     <header>
         <div class="container">
             <h2 class="logo">Netflix</h2>
             <nav>
                 <a href="#">
-                    Início
-                </a>
+                        Início
+                    </a>
                 <a href="#">
-                   Séries
-                </a>
+                       Séries
+                    </a>
                 <a href="#">
-                    Documentarios
-                </a>
+                        Documentarios
+                    </a>
                 <a href="#">
-                   Bombando
-                </a>
+                       Bombando
+                    </a>
                 <a href="#">
-                  Minha Lista
-                </a>
+                      Minha Lista
+                    </a>
             </nav>
         </div>
     </header>
-</div>
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3>
+                    Os Bombando da semana !
+
+                </h3>
+                <p class="descricao">
+                    Brazil , e outros paises estão vendo .
+                </p>
+                <button role="button" class="botao">
+                    Assistir Agora</button>
+                <button role="button" class="botao">
+                    Mais Informações
+                </button>
+            </div>
+        </div>
+    </main>
+
+</body>
+
+
+
 
 </html>
