--- a/index.html
+++ b/index.html
@@ -1,72 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+
+    <!--responsividade-->
     <link rel="stylesheet" href="style/responsive.css">
-    <title>NETFLIX UI CLONE : By Matheus Henrique Pereira Batista.</title>
 
+    <!--owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
 
-
+    <title>NETFLIX CLONE</title>
 </head>
 
-
 <body>
-
     <header>
         <div class="container">
             <h2 class="logo">NETFLIX</h2>
             <nav>
-                <a href="#" class="Navegar" id="NVG">
-                    Inicio
-                </a>
-                <a href="#" class="Navegar" id="NVG">
-                    Séries
-                </a>
-                <a href="#" class="Navegar" id="NVG">
-                    Filmes  
-                </a>
-                <a href="#" class="Navegar" id="NVG">
-                    Bombando
-                </a>
-                <a href="#" class="Navegar" id="NVG">Minha Lista</a>
+                <a href="#">Inicio</a>
+                <a href="#">Séries</a>
+                <a href="#">Filmes</a>
+                <a href="#">Documentários</a>
             </nav>
-
         </div>
-        <header>
-            <main>
-                <div class="filme-principal">
-                    <div class="container">
-                        <h3 class="titulo">
-                            HOUSE OF CARDS
-                        </h3>
-                        <p class="descricao">
-                            >Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assista agora a nova temporada de House of Cards que está imperdível.
-                        </p>
-                        <div class="botoes">
-                            <button role="button" class="botao">
-                                <i class="fas fa-play">
-                                    ASSISTIR AGORA
-
-                                </i>
-                                
-
-                            </button>
-                            <button role="button" class="botao">
-        <i class="fas fa-info-circle">
-            MAIS INFORMAÇOES 
-        </i>
-    </button>
-                        </div>
-                    </div>
-
-                </div>
-            </main>
-        </header>
     </header>
-</body>
 
-</html>
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">HOUSE OF CARDS</h3>
+                <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assista agora a nova temporada de House of Cards que está imperdível.</p>
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
+                        ASSISTIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
